# saka-cli

./: CMakeLists.txt  Makefile  README.md  build.sh
include/: OsInfo.h  hardwareInfo.h  systeminfo.h
scripts/: filter_processes.sh
src/: OsInfo.c  hardwareInfo.c  osInfo.c  systeminfo.c
